<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@color/newBlack"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgQuestion"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="18dp"
                android:contentDescription="@string/txtAppLogo"
                android:padding="10dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/txtRoadSigns"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />

            <Spinner
                android:id="@+id/spinChoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dialog"
                android:prompt="@string/txtQuizOpt" />

            <TextView
                android:id="@+id/tvEnterYourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="@string/txtEnterYourName"
                app:fontFamily="@font/montserrat" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:autofillHints="@string/txtYourName"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txtYourName"
                android:inputType="textCapSentences"
                android:textColor="@color/primaryColor"
                android:textSize="24sp"
                android:textStyle="italic"
                app:fontFamily="@font/oswald" />

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/button"
                android:text="@string/txtPlay"
                android:textColor="@color/darkGrey"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>