<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    android:background="@color/newBlack"
    tools:context=".Quiz">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatQuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:backgroundTint="#2B2A2A"
                android:clickable="true"
                android:contentDescription="@string/txtQuit"
                app:backgroundTint="#2B2A2A"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:background="@color/darkGrey"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="top|start"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    app:fontFamily="@font/oswald" />

                <TextView
                    android:id="@+id/tvProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="top|end"
                    android:gravity="top|end"
                    android:textSize="16sp"
                    app:fontFamily="@font/oswald" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:contentDescription="@string/txtDescription"
                app:srcCompat="@drawable/grey_rounded" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/txtQuestion"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="20sp"
                app:fontFamily="@font/montserrat" />

            <RadioGroup
                android:id="@+id/rbtnChoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_weight="4">

                <RadioButton
                    android:id="@+id/rbtnChoice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@color/darkGrey"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/txtOptions"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    app:fontFamily="@font/oswald" />

                <RadioButton
                    android:id="@+id/rbtnChoice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@color/darkGrey"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/txtOptions"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    app:fontFamily="@font/oswald" />

                <RadioButton
                    android:id="@+id/rbtnChoice3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@color/darkGrey"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/txtOptions"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    app:fontFamily="@font/oswald" />

                <RadioButton
                    android:id="@+id/rbtnChoice4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@color/darkGrey"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:text="@string/txtOptions"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="15sp"
                    app:fontFamily="@font/oswald" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:text="@string/txtSubmit"
                android:textColor="@color/darkGrey"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat" />


        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>